# matterlab

./: .env.dist  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  docker-compose.override.yaml  docker-compose.stage.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_08_07_1133-c40ee8c0eabb_add_table_gitlab_project.py  2023_08_07_1139-f6f1bd85935d_add_table_mattermost_channel.py  2023_08_07_1156-517bd853da12_add_gitlab_mattermost_relation.py  2023_08_10_0738-2037b8e981c1_create_table_mattermost_user.py  2023_08_10_1108-98fd171f2f3d_create_table_gitlab_user_and_relation.py  2023_08_10_1205-1533d2a7d676_add_path_field_to_gitlab_project.py  2023_08_11_1351-dccf1cbf8997_rename_url_field_gitlab_project.py  2023_08_14_0810-13488ed98462_add__avatar_url_field__gitlab_project.py  2023_08_14_1022-b089de9f3c7c_delete__temp_remove_mm_channel.py  2023_08_14_1024-16a24b7389c9_add__return_mm_channel.py  2023_08_15_0904-cf120e90cfcb_add__mattermost_bot.py
app/docker/backend/: nginx.conf
app/stage/: build
src/: __init__.py  config.py  database.py  main.py
src/config/: redis.py  settings.py
src/gitlab/: api.py  crud.py  exceptions.py  models.py  routers.py  schemas.py  services.py
src/mattermost/: __init__.py  api.py  crud.py  models.py  routers.py  schemas.py  services.py
